force-app/main/default/objects/OfferCode32Admin__c/OfferCode32Admin__c.object-meta.xml
<CustomObject>
    <label>Amm Codici Offerta 32</label>
    <nameField>
        <displayFormat>Amm-{000000}</displayFormat>
        <label>Amm Codici Offerta 32 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amm Codici Offerta 32</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>