force-app/main/default/objects/OfferCode32Admin__c/fields/CodT0__c.field-meta.xml
<CustomField>
    <fullName>CodT0__c</fullName>
    <label>Cod T0​</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>