force-app/main/default/objects/OfferCode32Admin__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Società</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>7030</fullName>
                <label>EstEnergy S.p.A.</label>
            </value>
            <value>
                <fullName>2060</fullName>
                <label>Hera Comm Marche</label>
            </value>
            <value>
                <fullName>1070</fullName>
                <label>Hera Comm S.p.A.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>