force-app/main/default/objects/OfferCode32Admin__c/fields/Driver3__c.field-meta.xml
<CustomField>
    <fullName>Driver3__c</fullName>
    <label>Driver3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INDICE</fullName>
            </value>
            <value>
                <fullName>PREZZO</fullName>
            </value>
            <value>
                <fullName>SCONTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>