force-app/main/default/objects/OfferCode32Admin__c/fields/MarketType__c.field-meta.xml
<CustomField>
    <fullName>MarketType__c</fullName>
    <label>Tipo mercato</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>FUI</fullName>
            </value>
            <value>
                <fullName>Libero</fullName>
            </value>
            <value>
                <fullName>Regolamentato</fullName>
            </value>
            <value>
                <fullName>Salvaguardia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>