force-app/main/default/objects/OfferCode32Admin__c/fields/OfferCode32__c.field-meta.xml
<CustomField>
    <fullName>OfferCode32__c</fullName>
    <label>Codice Offerta 32</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>