force-app/main/default/objects/OfferCode32Admin__c/fields/OfferProductCode__c.field-meta.xml
<CustomField>
    <fullName>OfferProductCode__c</fullName>
    <label>Codice prodotto offerta</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>