force-app/main/default/objects/OfferCode32Admin__c/fields/OfferProductVersion__c.field-meta.xml
<CustomField>
    <fullName>OfferProductVersion__c</fullName>
    <label>Versione prodotto offerta</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>