force-app/main/default/objects/OfferCode32Admin__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Servizio</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <label>Elettrico</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Gas</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Dual Fuel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>