force-app/main/default/objects/OfferCode32Admin__c/validationRules/Offer_Code_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Offer_Code_Length</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(OfferCode32__c) &lt;&gt; 32</errorConditionFormula>
    <errorMessage>La lunghezza del codice non può essere diversa da 32 caratteri</errorMessage>
</ValidationRule>